--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,4 +46,12 @@ dependencies {
     implementation 'com.github.splatte:ViewPagerIndicator:3.0.0'
 
     implementation 'androidx.fragment:fragment-ktx:1.1.0-rc04'
+
+    //recycler view
+    implementation 'com.android.support:recyclerview-v7:29.0.3'
+
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+
+    //circle indicator
+    implementation 'me.relex:circleindicator:2.1.4'
 }
