--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,13 +49,11 @@
         <activity
             android:name=".activity.HomeScreenPassengerActivity"
             android:configChanges="orientation|keyboardHidden"
-            android:label="@string/title_activity_home_screen_passenger"
-            android:screenOrientation="portrait" />
+            android:label="@string/title_activity_home_screen_passenger" />
         <activity
             android:name=".activity.ProfileCreationDriverActivity"
             android:configChanges="orientation|keyboardHidden"
-            android:windowSoftInputMode="stateAlwaysHidden"
-            android:screenOrientation="portrait" />
+            android:windowSoftInputMode="stateAlwaysHidden" />
         <activity
             android:name=".activity.ProfileCreationPassengerActivity"
             android:configChanges="orientation|keyboardHidden"
