--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,25 +23,23 @@
         android:hardwareAccelerated="false"
         android:icon="@mipmap/ic_launcher1"
         android:label="@string/app_name"
+        android:requestLegacyExternalStorage="true"
         android:screenOrientation="portrait"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
+        android:usesCleartextTraffic="true"
         android:windowSoftInputMode="stateHidden|adjustResize"
         tools:ignore="AllowBackup,GoogleAppIndexingWarning">
-        <activity android:name=".activity.HomeScreenNavDriverActivity"></activity>
+        <activity android:name=".activity.NewDriverNavActivity"></activity>
+        <activity android:name=".activity.SliderActivity" />
+        <activity android:name=".activity.NewPassengerNavActivity" />
+        <activity
+            android:name=".activity.HomeScreenNavDriverActivity"
+            android:configChanges="orientation|keyboardHidden" />
         <activity
             android:name=".activity.HomeScreenNavPassengerActivity"
-            android:configChanges="orientation|keyboardHidden"
-            android:screenOrientation="portrait"
-            android:theme="@style/AppTheme" />
-        <!--
-             The API key for Google Maps-based APIs is defined as a string resource.
-             (See the file "res/values/google_maps_api.xml").
-             Note that the API key is linked to the encryption key used to sign the APK.
-             You need a different API key for each encryption key, including the release key that is used to
-             sign the APK for publishing.
-             You can define the keys for the debug and release targets in src/debug/ and src/release/.
-        -->
+            android:configChanges="orientation|keyboardHidden" />
+
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
@@ -57,16 +55,13 @@
         <activity
             android:name=".activity.ProfileCreationPassengerActivity"
             android:configChanges="orientation|keyboardHidden"
-            android:screenOrientation="portrait"
             android:windowSoftInputMode="stateAlwaysHidden" />
         <activity
             android:name=".activity.IntroductionActivity"
-            android:configChanges="orientation|keyboardHidden"
-            android:screenOrientation="portrait" />
+            android:configChanges="orientation|keyboardHidden" />
         <activity
             android:name=".activity.LoginActivity"
             android:configChanges="orientation|keyboardHidden"
-            android:screenOrientation="portrait"
             android:windowSoftInputMode="stateAlwaysHidden" />
         <activity android:name=".activity.SplashScreen">
             <intent-filter>
