--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,7 +80,8 @@ dependencies {
 
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.android.support:design:29.0.3'
-
+    //Card Scanner
+    implementation 'io.card:android-sdk:5.5.0'
 
 
 }
