--- a/seeway-project.properties
+++ b/seeway-project.properties
@@ -4,8 +4,7 @@ sonar.projectKey=seeway_app_android
 sonar.projectName=seeway_app_android
 sonar.projectVersion=1.0.0
 sonar.sources=app
-sonar.language=kotlin
-#sonar.language=java
+sonar.language=kotlin,java
 sonar.sourceEncoding=UTF-8
 #sonar.exclusions=app/Providers/**
 #sonar.inclusions=*.java,*.kt
