--- a/seeway-project.properties
+++ b/seeway-project.properties
@@ -4,7 +4,7 @@ sonar.projectKey=Seeway_Android
 sonar.projectName=Seeway_Android
 sonar.projectVersion=1.0.0
 sonar.sources=app
-sonar.language=kotlin,java
+sonar.language=kotlin
 sonar.sourceEncoding=UTF-8
 #sonar.exclusions=app/Providers/**
 #sonar.inclusions=*.java,*.kt
