--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,12 +10,12 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-feature android:name="android.hardware.camera.any" />
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.ACCESS_NOTIFICATION_POLICY" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.SEND_SMS" />
-    <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.DISABLE_KEYGUARD" />
 
     <application
@@ -87,9 +87,16 @@
         <activity
             android:name=".onBoard.activities.ChooseSecurityActivity"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustPan" /> <!-- User Panel -->
+            android:windowSoftInputMode="adjustPan" />
+        <activity android:name=".onBoard.activities.FaceLockActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".onBoard.activities.FingerPrintLockActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".onBoard.activities.PatternLockActivity"
+            android:screenOrientation="portrait"/>
+        <!-- User Panel -->
         <activity
-            android:name=".panels.passenger.PassengerMainActivity"
+            android:name=".panels.passenger.dashboard.PassengerMainActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" />
         <activity
@@ -104,7 +111,7 @@
 
         <!-- Driver Panel -->
         <activity
-            android:name=".panels.driver.DriverMainActivity"
+            android:name=".panels.driver.dashboard.DriverMainActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" />
         <activity
