--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@
 
 buildscript {
     ext.kotlin_version = '1.4.0'
+    ext.retrofit_version = '2.9.0'
     repositories {
         google()
         jcenter()
